# besst-dataset

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
dataset/: besst.py  dataset.py  gender_dataset.py  speaker_dataset.py
dataset/metadata/: README.md  participants.csv  semantic-segments.csv  speech-segments.csv
dataset/metadata/json/: 10-semantic.json  10-speech.json  11-semantic.json  11-speech.json  13-semantic.json  13-speech.json  14-semantic.json  14-speech.json  15-semantic.json  15-speech.json  16-semantic.json  16-speech.json  17-semantic.json  17-speech.json  19-semantic.json  19-speech.json  20-semantic.json  20-speech.json  21-semantic.json  21-speech.json  22-semantic.json  22-speech.json  23-semantic.json  23-speech.json  24-semantic.json  24-speech.json  25-semantic.json  25-speech.json  26-semantic.json  26-speech.json  27-semantic.json  27-speech.json  28-semantic.json  28-speech.json  29-semantic.json  29-speech.json  30-semantic.json  30-speech.json  31-semantic.json  31-speech.json  (+118 more)
dataset/metadata/lists/cognitive-load-clse/audio-video-ecg/a/: train.scp
dataset/metadata/lists/cognitive-load-clse/audio-video-ecg/b/: validation.scp
dataset/metadata/lists/cognitive-load-clse/audio-video-ecg/c/: validation.scp
dataset/metadata/lists/cognitive-load/audio/: test.scp
dataset/metadata/stats/: cognitive-load_audio-a  cognitive-load_audio-b  cognitive-load_audio-c  cognitive-load_audio-d  cognitive-load_audio-e
tests/: verify.py
utils/: create_lists_v2.py  create_lists_v6.py  estimate_speaker_stats.py  verify.py
(+93 files in other folders)
